Fix compile error
Do not use Java 11 methods; the baseline for Apache MINA sshd is Java
1.8.